# opengl_glsl_example

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
bakingAO/: .cproject  .project
bakingAO/Debug/: bakingAO
glsl1/: CMakeLists.txt  Shader.h  glad.c  glsl1.vcxproj  glsl1.vcxproj.filters  main.cpp  screen.fs  shader.fs  shader.vs
glsl1/Debug/: vc140.idb
glsl1/Debug/glsl1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  glsl1.lastbuildstate
glsl1/x64/Debug/: vc140.idb
glsl1/x64/Debug/glsl1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  glsl1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glsl2/: CMakeLists.txt  glsl2.vcxproj  main.cpp  screen.fs
glsl2/x64/Debug/: vc140.idb
glsl2/x64/Debug/glsl2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glsl3/: CMakeLists.txt  glsl3.vcxproj  main.cpp  screen.fs  shader.vs
glsl3/x64/Debug/: vc140.idb
glsl3/x64/Debug/glsl3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glsl4/: CMakeLists.txt  glsl4.vcxproj  glsl4.vcxproj.filters  screen.fs
glsl4/x64/Debug/: vc140.idb
glsl4/x64/Debug/glsl4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glsl5/: CMakeLists.txt  glsl5.vcxproj  glsl5.vcxproj.filters  screen.fs
glsl5/x64/Debug/: vc140.idb
glsl5/x64/Debug/glsl5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glsl6/: CMakeLists.txt  glsl6.vcxproj  glsl6.vcxproj.filters  main.cpp
glsl6/x64/Debug/: vc140.idb
glsl6/x64/Debug/glsl6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glsl7/: CMakeLists.txt  Math.h  Matrix.h  Shader.h  VectorType.h  glsl7.vcxproj  glsl7.vcxproj.filters  main.cpp  screen.fs  shader.fs
glsl7/x64/Debug/: vc140.idb
glsl7/x64/Debug/glsl7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/glad/: glad.h
lib64/: glfw3.lib  libglfw.so.3.3
offscreen/: CMakeLists.txt  main.cpp  screen.fs
support/: CMakeLists.txt
support/glad/: CMakeLists.txt  glad.c  glad.h
support/glfw/: CMakeLists.txt
support/tojpg/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
toy/: CMakeLists.txt  aabb.h  camera.cpp  camera.h  const.h  control.h  euler.h  load_gltf.cpp  matrix.h  quaternion.h  scene.cpp  scene.h  track_ball.cpp  track_ball.h  util.h  vector.h
toy/controls/: controls.h
toyUtil/: CMakeLists.txt  aabb.h  camera.h  matrix.h  scene.cpp  scene.h  vector.h  vector_type.h
